--- a/site002/estilos/main.css
+++ b/site002/estilos/main.css
@@ -63,7 +63,7 @@ main p {
     margin-bottom: 20px;
 }
 main img {
-    width: 100%;
+    width: 80%;
     max-width: 800px;
     min-width: 400px;
     display: block;
@@ -87,7 +87,17 @@ main #dica {
 }
 main :hover > #dica{
     display: block;
-    background-color:white;
+    background-color:rgb(255, 255, 255);
     width: 300px;
     border-radius: 0px 15px;
+}
+footer {
+    background-color: var(--color5);
+    text-align: center;
+    color: white;
+}
+footer a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.1em;
 }
