organizando melhor as pastas

--- a/flix/css/main.css
+++ b/flix/css/main.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url("/imagens/medium-shot-couple-being-romantic.jpg");
+    background-image: url("/");
     background-position: top;
     background-attachment: fixed;
     background-size: cover;
