--- a/flix/css/main.css
+++ b/flix/css/main.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url("/flix/imagens/medium-shot-couple-being-romantic.jpg");
+    background-image: url("../imagens/medium-shot-couple-being-romantic.jpg");
     background-position: top;
     background-attachment: fixed;
     background-size: cover;
@@ -22,7 +22,7 @@ body{
     width: 150px;
     height: 150px;
     margin: 10px;
-    background-image: url("/flix/imagens/medium-shot-couple-being-romantic.jpg");
+    background-image: url("../imagens/medium-shot-couple-being-romantic.jpg");
     background-size: cover;
     position: relative;
 }
