--- a/flix/css/main.css
+++ b/flix/css/main.css
@@ -22,7 +22,7 @@ body{
     width: 150px;
     height: 150px;
     margin: 10px;
-    background-image: url("../imagens/medium-shot-couple-being-romantic.jpg");
+    background-image: url("../imagens/Captura\ de\ tela\ 2025-03-15\ 120401.png");
     background-size: cover;
     position: relative;
 }
